--- a/Lesson_13/index.html
+++ b/Lesson_13/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class=" navigation container">
-            <a href="#" class="header_logo"><img src="./images/Logo.svg" alt="Page Logo"></a>
+            <a href="#" class="header_logo" id="top"><img src="./images/Logo.svg" alt="Page Logo"></a>
 
             <nav>
                 <ul class="nav_list">
@@ -83,8 +83,116 @@
                 </div>
             </div>
 
+            <div class="services">
+                <div class="description">
+                    <p>We love work hard and explore new things that’s why we cover lot of things. Check our service
+                        list and view details</p>
+                </div>
+                <div class="service_list">
+                    <ul>
+                        <li>Multimedia</li>
+                        <li>Interactive Design</li>
+                        <li> Branding</li>
+                        <li> Creative design</li>
+                        <li>Packaging</li>
+                        <li> Coding</li>
+                    </ul>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="container">
+            <div class="awards">
+                <div class="competition">
+                    Awwwards
+                </div>
+                <div class="category">
+                    <div class="positions">
+                        <div class="title">
+                            Site of the day
+                        </div>
+                        <div class="title_text">
+                            <h5>Genesis UI Kit</h5>
+                            <p>Application that helps to find nearest sport centres</p>
+                        </div>
+                        <div class="award_year">
+                            2018
+                        </div>
+                    </div>
+
+                    <div class="positions second_nomination">
+                        <div class="title">
+                            Best Navigation
+                        </div>
+                        <div class="title_text">
+                            <h5>Genesis Template</h5>
+                            <p>Application that helps to find nearest sport centres</p>
+                        </div>
+                        <div class="award_year">
+                            2018
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="awards second_award">
+                <div class="competition">
+                    CSSDesignAwards
+                </div>
+                <div class="category">
+                    <div class="positions">
+                        <div class="title">
+                            Site of the day
+                        </div>
+                        <div class="title_text">
+                            <h5>Genesis UI Kit</h5>
+                            <p>Application that helps to find nearest sport centres</p>
+                        </div>
+                        <div class="award_year">
+                            2017
+                        </div>
+                    </div>
+
+                    <div class="positions second_nomination">
+                        <div class="title">
+                            Best Navigation
+                        </div>
+                        <div class="title_text">
+                            <h5>Genesis Template</h5>
+                            <p>Application that helps to find nearest sport centres</p>
+                        </div>
+                        <div class="award_year">
+                            2016
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container footer_nav">
+            <div>
+                <a href="#top" class="footer_logo"><img src="./images/Logo.svg" alt="Page Logo"></a>
+            </div>
+            <div class="footer_link">
+                <ul class="text_links">
+                    <li><a href="#" class="navlist_item">Projects</a></li>
+                    <li><a href="#" class="navlist_item">Contact</a></li>
+                </ul>
+
+                <ul class="icons_link">
+                    <li><a href="https://dribbble.com/" target="_blank"><img src="./images/dribbble-logo.svg"
+                                alt="Basketball"></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.svg"
+                                alt="Instagram"></a></li>
+                    <li><a href="https://x.com/home" target="_blank"><img src="./images/twitter-logo-silhouette.svg"
+                                alt="Twitter"></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
