--- a/Lesson_13/index.html
+++ b/Lesson_13/index.html
@@ -46,40 +46,40 @@
         <section class="container">
             <div class="gallery">
                 <div class="portfolios">
-                    <img src="./images/picture1.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_1.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture2.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_2.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture3.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_3.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture4.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_4.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture5.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_5.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture6.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_6.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture7.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_7.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture8.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_8.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture9.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_9.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture10.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_10.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture11.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_11.jpg" alt="Portfolios Photos">
                 </div>
                 <div class="portfolios">
-                    <img src="./images/picture12.jpg" alt="Portfolios Photos">
+                    <img src="./images/gallery_image_12.jpg" alt="Portfolios Photos">
                 </div>
             </div>
 
