search bar project one

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -8,12 +8,39 @@
     <link rel="stylesheet" href="./assets/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
-
+    <header>
+        <div class="intro">
+            <div class="intro_texts">
+                <h1 class="title_text">Bhromaon</h1>
+                <p class="title_text_info">Safe Travel Anywhere</p>
+                <div class="search_bar">
+                    <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
+                        <input type="text" placeholder=" Search your travel destination">
+                        <button class="btn search_button">
+                            Search <img src="./assets/images/search.svg" alt="Search icon">
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="logo">
+            <a href="#"><img src="./assets/images/Logo.svg" alt="Page Logo"></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Who we are</a></li>
+                <li><a href="#">What we do</a></li>
+                <li><a href="#">Travel with us</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
