responsive design HW

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0bee8dce34.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -22,25 +24,51 @@
                 <div class="search_bar">
                     <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
                         <input type="text" placeholder=" Search your travel destination">
-                        <button class="btn search_button">
+                        <button class="btn search_button" type="submit">
                             Search <img src="./assets/images/search.svg" alt="Search icon">
                         </button>
                     </form>
                 </div>
+
+                <div class="scroll">
+                    <h3>Scroll Down</h3>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
             </div>
         </div>
-        <div class="logo">
-            <a href="#"><img src="./assets/images/Logo.svg" alt="Page Logo"></a>
+        <div class="header_navigation">
+            <div class="header_navigation_container">
+                <a href="#"><img src="./assets/images/Logo.svg" alt="Page Logo" class="logo"></a>
+
+                <nav>
+                    <ul class="nav_list">
+                        <li><a href="#">Who we are</a></li>
+                        <li><a href="#">What we do</a></li>
+                        <li><a href="#">Travel with us</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </nav>
+            </div>
+
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Who we are</a></li>
-                <li><a href="#">What we do</a></li>
-                <li><a href="#">Travel with us</a></li>
-                <li><a href="#">Contact us</a></li>
-            </ul>
-        </nav>
     </header>
+
+    <main>
+        <div class="why_choose_us_container">
+            <div class="why_choose_us">
+                <div class="why_choose_us_left">
+                    <h2>Why choose us</h2>
+                    <p>Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of
+                        the moment, so blinded
+                        by desire, that they cannot foresee.</p>
+                    <p>Ddislike men who are so beguiled and demoralized by the
+                        charms of pleasure of the
+                        moment, so blinded by desire, that.</p>
+                </div>
+                <div class="why_choose_us_right"></div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
