--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="Lesson_12/index.html" target="_blank">Lesson 12</a></li>
         <li><a href="Lesson_13/index.html" target="_blank">Lesson 13</a></li>
         <li><a href="Project_1/index.html" target="_blank">Project 1</a></li>
+        <li><a href="Lesson_14/index.html" target="_blank">Lesson 14</a></li>
       </ul>
     </div>
   </div>
