--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -54,7 +54,7 @@
             <div class="feature_heading">
                 <h2>We design tools to unveil your superpowers</h2>
             </div>
-            <div class="column cards">
+            <div class="column cards first_icon">
                 <img src="images/pointer-icon.svg" alt="Pointer Icon" class="icon pointer_icon">
                 <div class="details">
                     <h3 class="title__detail">
@@ -90,6 +90,7 @@
                     <p class="deets">Personal choices and the overall personality of the person.</p>
                 </div>
             </div>
+
             <div class="mid_sign_up">
                 <button class="button action started_button">SIGN UP NOW</button>
             </div>
@@ -134,7 +135,7 @@
             </div>
         </section>
 
-        <section class="professional">
+        <section class="professional screen_change">
             <div class="column">
                 <img src="images/product-manager-image.svg" alt="Guy with blue shirt" class="image">
             </div>
