how it works search section

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -54,20 +54,60 @@
     </header>
 
     <main>
-        <div class="why_choose_us_container">
-            <div class="why_choose_us">
-                <div class="why_choose_us_left">
-                    <h2>Why choose us</h2>
-                    <p>Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of
-                        the moment, so blinded
-                        by desire, that they cannot foresee.</p>
-                    <p>Ddislike men who are so beguiled and demoralized by the
-                        charms of pleasure of the
-                        moment, so blinded by desire, that.</p>
+        <section>
+            <div class="why_choose_us_container">
+                <div class="why_choose_us">
+                    <div class="why_choose_us_left">
+                        <h2>Why choose us</h2>
+                        <p>Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure
+                            of
+                            the moment, so blinded
+                            by desire, that they cannot foresee.</p>
+                        <p>Ddislike men who are so beguiled and demoralized by the
+                            charms of pleasure of the
+                            moment, so blinded by desire, that.</p>
+                        <button class="btn btn_places">
+                            Explore places
+                        </button>
+                    </div>
+                    <div class="why_choose_us_right">
+                        <div class="wcu_img_up">
+                            <img src="./assets/images/image2.jpg" alt="A house by the river">
+                        </div>
+                        <div class="wcu_img_down">
+                            <img src="./assets/images/image3.jpg" alt="A person on a cliff">
+                        </div>
+                    </div>
                 </div>
-                <div class="why_choose_us_right"></div>
             </div>
-        </div>
+        </section>
+
+        <section>
+            <div class="search_select_books">
+                <div class="container">
+                    <div class="elements">
+                        <div class="elements_icons">
+                            <div class="elements_icons_image">
+                                <img src="./assets/images/search.svg" alt="Search Icon">
+                            </div>
+                            <h3>Search Places</h3>
+                        </div>
+                        <div class="elements_icons">
+                            <div class="elements_icons_image bg_lines">
+                                <img src="./assets/images/tick.svg" alt="A checkmark icon">
+                            </div>
+                            <h3>Select Places</h3>
+                        </div>
+                        <div class="elements_icons">
+                            <div class="elements_icons_image">
+                                <img src="./assets/images/like_button.svg" alt="Like Icon">
+                            </div>
+                            <h3>Book & Enjoy</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
