--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -108,6 +108,39 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="grand_spain_container">
+                <div class="grand_spain_one">
+                    <div class="grand_spain_one_container">
+                        <div class="spain_box_one">
+                            <div class="card">
+                                <h3>Spain</h3>
+                                <h4>Grand Spain Madrid</h4>
+                                <p>But I must explain to you how all this mistaken idea of account to denouncing
+                                    pleasure and praising pain was account
+                                    born and I account will give you a complete account of the system</p>
+                                <button class="btn">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grand_spain_two">
+                    <div class="grand_spain_two_container">
+                        <div class="spain_box_two">
+                            <div class="card">
+                                <h3>Spain</h3>
+                                <h4>Grand Spain Madrid</h4>
+                                <p>But I must explain to you how all this mistaken idea of account to denouncing
+                                    pleasure and praising pain was account
+                                    born and I account will give you a complete account of the system</p>
+                                <button class="btn">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
