project_1 without media queries

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="top">
         <div class="intro">
             <div class="intro_texts">
                 <h1 class="title_text">Bhromaon</h1>
@@ -141,7 +141,58 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="tourist">
+                <div class="tourist_container">
+                    <h2>What our tourist say</h2>
+                    <div class="tourist_comments">
+                        <div class="tourist_image">
+                            <img src="./assets/images/hiking_front.jpg" alt="A person in the hills">
+                        </div>
+                        <div class="tourist_quote">
+                            <h4>Sam Sumon</h4>
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i> But I must explain to you how all this mistaken
+                                idea
+                                of account to
+                                denouncinpleasure and praising pain But I must
+                                explain to you how all this mistaken idea of account to nai denouncing pleasure and
+                                praising
+                                pain was account born and I
+                                account will give you a complete account of the system was account born and I account
+                                will
+                                give you a nai the complete
+                                account of the system
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="footer_container">
+            <div class="footer_contents">
+                <div class="footer_logo">
+                    <a href="#top"><img src="./assets/images/Logo.svg" alt="Company logo"></a>
+                </div>
+                <h3>Safe travel anywhere</h3>
+                <ul class="social_links">
+                    <li><a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F"
+                            target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://x.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/" target="_blank"><i
+                                class="fa-brands fa-linkedin-in linkedin"></i></a>
+                    </li>
+                    <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
