hover effects on lists and buttons

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -23,22 +23,23 @@
                 <p class="title_text_info">Safe Travel Anywhere</p>
                 <div class="search_bar">
                     <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
-                        <input type="text" placeholder=" Search your travel destination">
+                        <input type="text" placeholder=" Search Your Travel Destination" required>
                         <button class="btn search_button" type="submit">
-                            Search <img src="./assets/images/search.svg" alt="Search icon">
+                            Search <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
                     </form>
                 </div>
 
                 <div class="scroll">
-                    <h3>Scroll Down</h3>
-                    <i class="fa-solid fa-chevron-down"></i>
+                    <a href="#nav_contents">
+                        <h3>Scroll Down</h3>
+                        <i class="fa-solid fa-chevron-down"></i>
                 </div>
             </div>
         </div>
         <div class="header_navigation">
             <div class="header_navigation_container">
-                <a href="#"><img src="./assets/images/Logo.svg" alt="Page Logo" class="logo"></a>
+                <img src="./assets/images/Logo.svg" id="nav_contents" alt="Page Logo" class="logo"></a>
 
                 <nav>
                     <ul class="nav_list">
@@ -181,13 +182,16 @@
                 <h3>Safe travel anywhere</h3>
                 <ul class="social_links">
                     <li><a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F"
-                            target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="https://x.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/" target="_blank"><i
-                                class="fa-brands fa-linkedin-in linkedin"></i></a>
+                            target="_blank"><i class="fa-brands fa-facebook-f grow"></i></a></li>
+                    <li><a href="https://x.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter grow"></i></a>
                     </li>
-                    <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-                    <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
+                    <li><a href="https://www.linkedin.com/" target="_blank"><i
+                                class="fa-brands fa-linkedin-in linkedin grow"></i></a>
+                    </li>
+                    <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube grow"></i></a>
+                    </li>
+                    <li><a href="https://www.pinterest.com/" target="_blank"><i
+                                class="fa-brands fa-pinterest grow"></i></a>
                     </li>
                 </ul>
             </div>
