media queries 380px

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -22,7 +22,7 @@
                 <h1 class="title_text">Bhromaon</h1>
                 <p class="title_text_info">Safe Travel Anywhere</p>
                 <div class="search_bar">
-                    <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
+                    <form action="https://jkorpela.fi/cgi-bin/echo.cgi" name="destination">
                         <input type="text" placeholder=" Search Your Travel Destination" required>
                         <button class="btn search_button" type="submit">
                             Search <i class="fa-solid fa-magnifying-glass"></i>
@@ -34,12 +34,13 @@
                     <a href="#nav_contents">
                         <h3>Scroll Down</h3>
                         <i class="fa-solid fa-chevron-down"></i>
+                    </a>
                 </div>
             </div>
         </div>
         <div class="header_navigation">
-            <div class="header_navigation_container">
-                <img src="./assets/images/Logo.svg" id="nav_contents" alt="Page Logo" class="logo"></a>
+            <div class="header_navigation_container" id="nav_contents">
+                <img src="./assets/images/Logo.svg" alt="Page Logo" class="logo">
 
                 <nav class="nav" id="nav">
                     <button class="close-button">&times;</button>
