--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -22,8 +22,8 @@
                 <h1 class="title_text">Bhromaon</h1>
                 <p class="title_text_info">Safe Travel Anywhere</p>
                 <div class="search_bar">
-                    <form action="https://jkorpela.fi/cgi-bin/echo.cgi" name="destination">
-                        <input type="text" placeholder=" Search Your Travel Destination" required>
+                    <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
+                        <input type="text" placeholder=" Search Your Travel Destination" required name="destination">
                         <button class="btn search_button" type="submit">
                             Search <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
@@ -40,7 +40,7 @@
         </div>
         <div class="header_navigation">
             <div class="header_navigation_container" id="nav_contents">
-                <img src="./assets/images/Logo.svg" alt="Page Logo" class="logo">
+                <a href="#"><img src="./assets/images/Logo.svg" alt="Page Logo" class="logo"></a>
 
                 <nav class="nav" id="nav">
                     <button class="close-button">&times;</button>
