--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -16,7 +16,8 @@
         <div class="container header__container">
             <a href="#" class="header__logo"><img src="images/productly-logo.svg" alt="Productly logo"></a>
 
-            <nav class="header__nav">
+            <nav class="header__nav nav">
+                <button class="close-button">&times;</button>
                 <ul class="header__menu">
                     <li><a href="#">Product</a></li>
                     <li><a href="#">Customer</a></li>
@@ -24,6 +25,12 @@
                     <li><a href="#">Resources</a></li>
                 </ul>
             </nav>
+
+            <div class="hamburger-menu" id="hamburger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
             <div class="header__buttons">
                 <button class="button">Sign In</button>
                 <button class="button action">Sign Up</button>
@@ -240,7 +247,24 @@
             </div>
         </div>
     </footer>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const hamburgerMenu = document.querySelector('.hamburger-menu');
+            const nav = document.querySelector('.nav');
+            const closeButton = document.querySelector('.close-button');
+            const bars = document.querySelectorAll('.bar');
 
+            hamburgerMenu.addEventListener('click', function () {
+                nav.classList.toggle('active');
+                bars.forEach(bar => bar.classList.toggle('hidden'));
+            });
+
+            closeButton.addEventListener('click', function () {
+                nav.classList.remove('active');
+                bars.forEach(bar => bar.classList.remove('hidden'));
+            });
+        });
+    </script>
 </body>
 
 </html>
