--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <li><a href="Lesson_13/index.html" target="_blank">Lesson 13</a></li>
         <li><a href="Project_1/index.html" target="_blank">Project 1</a></li>
         <li><a href="Lesson_14/index.html" target="_blank">Lesson 14</a></li>
+        <li><a href="Lesson_15/Homeworks/index.html" target="_blank">Lesson 15</a></li>
+        <li><a href="Lesson_16/Homeworks/index.html" target="_blank">Lesson 16</a></li>
       </ul>
     </div>
   </div>
