--- a/Lesson_16/Homeworks/index.html
+++ b/Lesson_16/Homeworks/index.html
@@ -13,40 +13,43 @@
 
 <body>
 
-    <h1>Homeworks</h1>
-    <div clas="three_digits">
-        <h2>Check for Identical digits in a Three-Digit number</h2>
-        <input type="text" id="numberInput" placeholder="Enter a three digit number">
-        <button id="checkButton">Check</button>
-        <p id="result"></p>
-    </div>
-
-    <div class="currency_converter">
-        <h2>Currency Converter</h2>
-        <div class="enter_amount">
-            <label for="amount">Enter the amount in USD:</label>
-            <input type="number" id="amount" placeholder="Amount in USD" min="0">
+    <div class="container">
+        <h1>Homeworks</h1>
+        <div clas="three_digits">
+            <h2>Check for Identical digits in a Three-Digit number</h2>
+            <input type="text" id="numberInput" placeholder="Enter a three digit number">
+            <button id="checkButton">Check</button>
+            <p id="result"></p>
         </div>
 
-        <div class="selection">
-            <label for="currency">Choose a currency:</label>
-            <select id="currency">
-                <option value="EUR">EUR(Euro)</option>
-                <option value="SEK">SEK(Swedish Kroner)</option>
-                <option value="JPY">JPY (Japanese Yen)</option>
-            </select>
-            <button id="convert">Convert</button>
-            <p id="result2"></p>
+        <div class="currency_converter">
+            <h2>Currency Converter</h2>
+            <div class="enter_amount">
+                <label for="amount">Enter the amount in USD:</label>
+                <input type="number" id="amount" placeholder="Amount in USD" min="0">
+            </div>
+
+            <div class="selection">
+                <label for="currency">Choose a currency:</label>
+                <select id="currency">
+                    <option selected>Choose the target currency</option>
+                    <option value="EUR">EUR(Euro)</option>
+                    <option value="SEK">SEK(Swedish Kroner)</option>
+                    <option value="JPY">JPY (Japanese Yen)</option>
+                </select>
+                <button id="convert">Convert</button>
+                <p id="result2"></p>
+            </div>
         </div>
-    </div>
 
 
-    <div class="leap_year">
-        <h2>Next Date</h2>
-        <label for="dateInput">Enter a Date(dd:mm:yy):</label>
-        <input type="text" id="dateInput" placeholder="DD:MM:YY">
-        <button id="calculateButton">Know the next Date</button>
-        <p id="result3"></p>
+        <div class="leap_year">
+            <h2>Next Date</h2>
+            <label for="dateInput">Enter a Date(dd:mm:yy):</label>
+            <input type="text" id="dateInput" placeholder="DD:MM:YY">
+            <button id="calculateButton">Know the next Date</button>
+            <p id="result3"></p>
+        </div>
     </div>
 
 
