--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="Lesson_14/index.html" target="_blank">Lesson 14</a></li>
         <li><a href="Lesson_15/Homeworks/index.html" target="_blank">Lesson 15</a></li>
         <li><a href="Lesson_16/Homeworks/index.html" target="_blank">Lesson 16</a></li>
+        <li><a href="Lesson_17/index.html" target="_blank">Lesson 17</a></li>
       </ul>
     </div>
   </div>
