--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li><a href="Lesson_15/Homeworks/index.html" target="_blank">Lesson 15</a></li>
         <li><a href="Lesson_16/Homeworks/index.html" target="_blank">Lesson 16</a></li>
         <li><a href="Lesson_17/index.html" target="_blank">Lesson 17</a></li>
+        <li><a href="Lesson_18/theories.js" target="_blank">Lesson 18</a></li>
+        <li><a href="Lesson_19/index.html" target="_blank">Lesson 19</a></li>
+
       </ul>
     </div>
   </div>
