--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <li><a href="Lesson_17/index.html" target="_blank">Lesson 17</a></li>
         <li><a href="Lesson_18/theories.js" target="_blank">Lesson 18</a></li>
         <li><a href="Lesson_19/index.html" target="_blank">Lesson 19</a></li>
+        <li><a href="Lesson_20/index.html" target="_blank">Lesson 20</a></li>
+        <li><a href="Lesson_21/Homeworks/index.html" target="_blank">Lesson 21</a></li>
 
       </ul>
     </div>
