lesson 22 part 1 and 2

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="Lesson_19/index.html" target="_blank">Lesson 19</a></li>
         <li><a href="Lesson_20/index.html" target="_blank">Lesson 20</a></li>
         <li><a href="Lesson_21/Homeworks/index.html" target="_blank">Lesson 21</a></li>
+        <li><a href="Lesson_22/index.html" target="_blank">Lesson 22</a></li>
 
       </ul>
     </div>
