Lesson 22 home work part 3 and 4

--- a/Lesson_22/index.html
+++ b/Lesson_22/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-    <!-- <script src="./groceryList.js"></script> -->
+    <script src="./groceryList.js"></script>
     <script src="./shoppingReceipt.js"></script>
+    <script src="./cssStyling.js"></script>
+    <script src="./classroomManangement.js"></script>
 </body>
 
 </html>
