--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="Lesson_20/index.html" target="_blank">Lesson 20</a></li>
         <li><a href="Lesson_21/Homeworks/index.html" target="_blank">Lesson 21</a></li>
         <li><a href="Lesson_22/index.html" target="_blank">Lesson 22</a></li>
+        <li><a href="Lesson_23/index.html" target="_blank">Lesson 23</a></li>
 
       </ul>
     </div>
