--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="Lesson_21/Homeworks/index.html" target="_blank">Lesson 21</a></li>
         <li><a href="Lesson_22/index.html" target="_blank">Lesson 22</a></li>
         <li><a href="Lesson_23/index.html" target="_blank">Lesson 23</a></li>
+        <li><a href="Lesson_24/Classroom/index.html" target="_blank">Lesson 24</a></li>
 
       </ul>
     </div>
