adding the missing link

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="Lesson_22/index.html" target="_blank">Lesson 22</a></li>
         <li><a href="Lesson_23/index.html" target="_blank">Lesson 23</a></li>
         <li><a href="Lesson_24/Homework/index.html" target="_blank">Lesson 24</a></li>
+        <li><a href="Lesson_25/index.html" target="_blank">Lesson 25</a></li>
 
       </ul>
     </div>
