--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="Lesson_24/Homework/index.html" target="_blank">Lesson 24</a></li>
         <li><a href="Lesson_25/index.html" target="_blank">Lesson 25</a></li>
         <li><a href="Lesson_26/index.html" target="_blank">Lesson 26</a></li>
+        <li><a href="Lesson_27/index.html" target="_blank">Lesson 27</a></li>
       </ul>
     </div>
   </div>
