--- a/Lesson_27/index.html
+++ b/Lesson_27/index.html
@@ -59,7 +59,9 @@
                                         <h3>First Released Oct 6, 2021</h3>
                                     </div>
                                     <div class="rating">
-
+                                        <div class="rating_value">
+                                            <p>8.7</p>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -115,8 +117,8 @@
         </div>
 
     </div>
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
     <script src="./main.js"></script>
 </body>
 
