renaming the project file

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="Lesson_25/index.html" target="_blank">Lesson 25</a></li>
         <li><a href="Lesson_26/index.html" target="_blank">Lesson 26</a></li>
         <li><a href="Lesson_27/index.html" target="_blank">Lesson 27</a></li>
+        <li><a href="Project_2/index.html" target="_blank">Project 2</a></li>
       </ul>
     </div>
   </div>
