navbar design incomplete

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -11,13 +11,48 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./assets/styles/main.css">
     <script src="https://kit.fontawesome.com/0bee8dce34.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 </head>
 
 <body>
+
+    <div class="container">
+        <header>
+            <div class="header_container">
+                <a href="#" class="header_logo">
+                    <img src="./assets/images/main_logo.svg" alt="Montecito logo">
+                </a>
+
+                <nav class="header_nav">
+                    <ul class="header_menu">
+                        <li><a href="#">
+                                <div class="list_dot_icon"></div>About us
+                            </a></li>
+                        <li><a href="#">
+                                <div class="list_dot_icon"></div>Projects
+                            </a></li>
+                        <li><a href="#">
+                                <div class="list_dot_icon"></div>News
+                            </a></li>
+                        <li><a href="#">
+                                <div class="list_dot_icon"></div>Contact
+                            </a></li>
+                    </ul>
+                </nav>
+
+                <div class="header_icons">
+                    <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i
+                            class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+        </header>
+
+    </div>
 
     <script src="./main.js"></script>
 </body>
